# nnffs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/matrix/: matrix.h
include/network/: activations.h  network.h
include/utils/: dataset.h  exception.h
src/: CMakeLists.txt  activations.cpp  matrix.cpp  nn.cpp
src/matrix/: matrix.cpp
src/network/: activations.cpp  network.cpp
src/nn/: activations.cpp  nn.cpp
src/utils/: dataset.cpp  exception.cpp
